--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,66 @@
 .maps {
     background: #eaeaea;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0px 5px 5px 0px #dddddd;
+}
+
+
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    font-size: 1rem;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+li {
+    list-style-type: none;
+}
+
+h2 {
+    margin: 0;
+}
+
+.header__img img {
+    object-fit: cover;
+    width: 100%;
+    height: 250px;
+}
+
+
+
+.arrow {
+    position: absolute;
+    left: 20px;
+}
+
+.menu__title {
+    padding: 10px 90px;
+}
+
+
+
+.last__line {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 1.5em;
+}
+
+.last__line p {
+    margin: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    
 }
