--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
+footer {
+  background-color: #353535;
+  padding: 25px;
+  color: white;
+}
+
+h3 {
+  font-family: "Shrikhand", "sans-serif";
+  padding: 5px 0 20px 0;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+ul {
+  list-style-type: none;
+}
+ul li {
+  padding: 5px 0 5px 0;
+}
+ul li a {
+  color: white;
+}
+
+.fa-utensils {
+  margin-right: 12px;
+}
+
+.fa-hands-helping {
+  margin-right: 5px;
+}
+
 .maps {
   background: #eaeaea;
   display: flex;
@@ -57,6 +88,31 @@ h2 {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+
+.last__line span {
+  margin-right: 5px;
+}
+
+.meal h4 {
+  margin: 0;
+}
+
+.starter h3, dish h3, .dessert h3 {
+  padding-left: 10px;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+
+.btn__order button {
+  margin: 30px 0;
+  padding: 20px;
+  width: 50%;
+}
+
+.btn__order {
+  display: flex;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
