--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  font-size: 1rem;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+li {
+  list-style-type: none;
+}
+
+h2 {
+  margin: 0;
+}
+
+h6 {
+  margin: 0;
+}
+
+h1, h6 {
+  font-family: Shrikhand, Roboto, sans-serif;
+}
+
+body, html {
+  font-family: "Roboto", sans-serif;
+}
+
 footer {
   background-color: #353535;
   padding: 25px;
@@ -29,36 +65,37 @@ ul li a {
   margin-right: 5px;
 }
 
+.restaurant__title {
+  width: 100%;
+}
+
+.restaurant__tile h3 {
+  padding: 30px 0px 0px 10px;
+}
+
+.main__restaurant {
+  background: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+}
+
+.heart {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.heart h4 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
 .maps {
   background: #eaeaea;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: inset 0px 5px 5px 0px #dddddd;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  font-size: 1rem;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-  color: #000;
-}
-
-li {
-  list-style-type: none;
-}
-
-h2 {
-  margin: 0;
 }
 
 .header__img img {
