--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   width: 100%;
   font-size: 1rem;
+  overflow-x: hidden;
 }
 
 * {
@@ -87,12 +88,7 @@ body, html {
 }
 
 footer {
-  display: block;
   background-color: #353535;
-  margin: 0;
-  border: 0;
-  font-size: 100%;
-  vertical-align: baseline;
   padding: 25px;
   color: white;
 }
@@ -112,10 +108,6 @@ ul li {
 }
 ul li a {
   color: white;
-}
-
-.fa-handshake {
-  transform: rotate(-45deg);
 }
 
 .fa-utensils {
@@ -439,8 +431,7 @@ ul li a {
 }
 
 .btn__about button {
-  background-image: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
-  border: 1px solid transparent;
+  border: 1px;
   border-radius: 30px;
   padding: 10px 5px;
   color: #fff;
@@ -498,7 +489,7 @@ ul li a {
   animation: fill 0.3s ease-in-out;
   display: inline-block;
   opacity: 1;
-  background: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+  background: -o-linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
   background: -webkit-linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -593,8 +584,7 @@ ul li a {
 }
 
 .btn__order button {
-  background-image: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
-  border: 1px solid transparent;
+  border: 1px;
   border-radius: 30px;
   padding: 10px 5px;
   color: #fff;
@@ -621,61 +611,4 @@ ul li a {
   justify-content: center;
 }
 
-.operation {
-  margin-bottom: 50px;
-}
-.operation h2 {
-  padding: 20px;
-}
-@media screen and (min-width: 1440px) {
-  .operation h2 {
-    text-align: center;
-  }
-}
-.operation__steps {
-  list-style-type: none;
-}
-@media screen and (min-width: 768px) {
-  .operation__steps {
-    flex-wrap: wrap;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.operation__steps li {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: nowrap;
-  padding: 25px;
-  margin: 15px 20px 15px 30px;
-  border-radius: 20px;
-  box-shadow: 1px 2px 8px 2px #c4c4c4;
-  background-color: #f5f5f5;
-}
-.operation__steps li p {
-  font-weight: 500;
-  margin-left: 20px;
-}
-.operation__steps li:hover {
-  background: #f2eafb;
-}
-.operation__steps li:hover .fas {
-  color: #9356dc;
-}
-.operation__steps--number {
-  background-color: #9356dc;
-  color: white;
-  border-radius: 50%;
-  padding: 5px 9px;
-  margin-left: -40px;
-}
-.operation__steps--icon {
-  color: grey;
-  font-size: 1.2rem;
-  margin-left: 20px;
-}
 /*# sourceMappingURL=style.css.map */
