--- a/sass/Components/_btn-about.scss
+++ b/sass/Components/_btn-about.scss
@@ -4,5 +4,7 @@
         background-color: lighten(#9356dc, 10%);
         background-blend-mode: lighten;
         box-shadow: 4px 4px 6px #000;
+        background-image: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+  border: 1px solid transparent;
     }
 }
