--- a/sass/Utils/_mixins.scss
+++ b/sass/Utils/_mixins.scss
@@ -17,7 +17,8 @@
 
 @mixin btn-about {
     
-    border: 1px;
+    background-image: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+    border: 1px solid transparent;
     border-radius: 30px;
     padding: 10px 5px;
     color: #fff;
