--- a/sass/Layout/_resto.scss
+++ b/sass/Layout/_resto.scss
@@ -4,7 +4,7 @@
     }   
 }
 
-.restaurant__tile h3 {
+.restaurant__title h3 {
     padding: 30px 0px 0px 10px;
     @include tablet {
         text-align: center;
